--- a/hexl/scripts/index.html
+++ b/hexl/scripts/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script src="apply/apply.js"></script>
 	<meta charset="UTF-8">
 	<title>hexl scripts dir</title>
 </head>
 <body>
 <h1>Hexl scripts directory...</h1>
 <h2>For test</h2>
+<!-- apply js test -->
+<script>
+	function tmpFunSum ()  {
+		return 10*10;
+	}
+	console.log(apply(0, Math.sqrt, 4));
+	console.log(apply(1, Math.sqrt, 4));
+	console.log(apply(1, tmpFunSum, 4));
+</script>
+<!-- apply js test -->
 </body>
 </html>
