--- a/hexl/scripts/index.html
+++ b/hexl/scripts/index.html
@@ -3,6 +3,7 @@
 <head>
 	<script src="apply/apply.js"></script>
 	<script src="getIncreasedNumFunction/getIncreasedNumFunction.js"></script>
+	<script src="flip/flip.js"></script>
 	<meta charset="UTF-8">
 	<title>hexl scripts dir</title>
 </head>
@@ -34,6 +35,28 @@
 	console.log(getIncreasedByHundredTimes(5)); // 500
 	console.log(getIncreasedByHundredTimes(14)); // 14 * 100 === 1400
 	console.log("------------------------------------getIncreasedNumFunction test END------------------------------");
+</script>
+<!-- getIncreasedNumFunction test END -->
+<!-- getIncreasedNumFunction test -->
+<script>
+	console.log("------------------------------------ FLIP test------------------------------");
+	// subtraction
+	const sub = (a, b) => a - b;
+	const reverseSub = flip(sub);
+
+	console.log(sub(5, 3)); // 2
+	console.log(reverseSub(5, 3)); // -2
+
+	// exponentiation
+	const wop = flip(Math.pow);
+
+	console.log(Math.pow(1, 2)); // 1
+	console.log(wop(1, 2)); // 2
+
+	console.log(Math.pow(3, 2)); // 9
+	console.log(wop(3, 2)); // 8
+
+	console.log("------------------------------------FLIP test END------------------------------");
 </script>
 <!-- getIncreasedNumFunction test END -->
 </body>
