--- a/hexl/scripts/index.html
+++ b/hexl/scripts/index.html
@@ -10,6 +10,15 @@
 <body>
 <h1>Hexl scripts directory...</h1>
 <h2>For test</h2>
+<!-- TEMP Sandbox  -->
+<script>
+	console.log("------------------------------------ TEMP Sandbox test------------------------------");
+	const tmpf = f=>f;
+	console.log(tmpf(5+10+2));
+	console.log("------------------------------------ TEMP Sandbox END ------------------------------");
+</script>
+<!-- TEMP Sandbox END -->
+
 <!-- apply js test -->
 <script>
 	console.log("------------------------------------apply js test------------------------------");
